--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,21 @@
         <module>web</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>jboss</id>
+            <url>http://repository.jboss.org/maven2</url>
+        </repository>
+        <repository>
+            <id>mystic</id>
+            <url>http://maven.mysticcoders.com/repository</url>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>http://repository.sonatype.org/</url>
+        </repository>
+    </repositories>
+    
     <dependencyManagement>
 
 		    <dependencies>
@@ -92,36 +107,55 @@
 		            <artifactId>commons-dbcp</artifactId>
 		            <version>${dbcp.version}</version>
 		        </dependency>
-		        <!-- SPRING DEPENDENCIES -->
-		        <dependency>
-		            <groupId>org.springframework</groupId>
-		            <artifactId>spring</artifactId>
-		            <version>${spring.version}</version>
-		        </dependency>
-		        <dependency>
-		            <groupId>org.springframework</groupId>
-		            <artifactId>spring-test</artifactId>
-		            <version>${spring.version}</version>
-		        </dependency>
-		        <dependency>
-		            <groupId>org.springframework</groupId>
-		            <artifactId>spring-tx</artifactId>
-		            <version>${spring.version}</version>
-		            <exclusions>
-		                <exclusion>
-		                    <groupId>org.springframework</groupId>
-		                    <artifactId>spring-core</artifactId>
-		                </exclusion>
-		                <exclusion>
-		                    <groupId>org.springframework</groupId>
-		                    <artifactId>spring-context</artifactId>
-		                </exclusion>
-		                <exclusion>
-		                    <groupId>org.springframework</groupId>
-		                    <artifactId>spring-beans</artifactId>
-		                </exclusion>
-		            </exclusions>
-		        </dependency>
+                <!-- SPRING DEPENDENCIES -->
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-core</artifactId>
+                    <version>${spring.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-test</artifactId>
+                    <version>${spring.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-beans</artifactId>
+                    <version>${spring.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-orm</artifactId>
+                    <version>${spring.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-web</artifactId>
+                    <version>${spring.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-tx</artifactId>
+                    <version>${spring.version}</version>
+                    <exclusions>
+                        <exclusion>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-core</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-context</artifactId>
+                        </exclusion>
+                        <exclusion>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-beans</artifactId>
+                        </exclusion>
+                    </exclusions>
+                </dependency>
 
 		        <!-- Hazelcast Dependencies -->
 		        <dependency>
@@ -129,6 +163,69 @@
 		            <artifactId>hazelcast</artifactId>
 		            <version>${hazelcast.version}</version>
 		        </dependency>
+
+                <!-- SimpleDS for GAE -->
+                <dependency>
+                    <groupId>org.extrema-sistemas</groupId>
+                    <artifactId>simpleds</artifactId>
+                    <version>0.9</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.google.appengine</groupId>
+                    <artifactId>appengine-api-1.0-sdk</artifactId>
+                    <version>1.3.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>asm</groupId>
+                    <artifactId>asm</artifactId>
+                    <version>3.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-jta_1.1_spec</artifactId>
+                    <version>1.1.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>javax.jdo</groupId>
+                    <artifactId>jdo2-api</artifactId>
+                    <version>2.3-eb</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-jpa_3.0_spec</artifactId>
+                    <version>1.1.1</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-jpa</artifactId>
+                    <version>1.1.5</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-enhancer</artifactId>
+                    <version>1.1.4</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.datanucleus</groupId>
+                    <artifactId>datanucleus-core</artifactId>
+                    <version>1.1.5</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>com.google.appengine.orm</groupId>
+                    <artifactId>datanucleus-appengine</artifactId>
+                    <version>1.0.5</version>
+                </dependency>
+                
+
 
 		        <!-- TWITTER4J DEPENDENCIES -->
 		        <dependency>
@@ -242,7 +339,7 @@
     <properties>
         <wicket.version>1.4.0</wicket.version>
         <jetty.version>6.1.4</jetty.version>
-        <spring.version>2.5.5</spring.version>
+        <spring.version>3.0.0.RELEASE</spring.version>
         <hibernate.version>3.4.0.GA</hibernate.version>
         <c3p0.version>0.9.1.2</c3p0.version>
         <junit.version>4.5</junit.version>
