--- a/web/pom.xml
+++ b/web/pom.xml
@@ -103,6 +103,10 @@
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-devutils</artifactId>
+        </dependency>
 
         <!--  HIBERNATE DEPENDNECIES -->
         <dependency>
