more updates for children

--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -12,3 +12,6 @@ log4j.logger.org.apache.wicket.RequestCycle=INFO
 
 log4j.logger.org.apache.commons.httpclient=DEBUG
 log4j.logger.org.jets3t=DEBUG
+
+#log4j.logger.org.hibernate=DEBUG
+#log4j.logger.org.springframework=DEBUG
