--- a/web/src/main/filters/filters-LOCAL.properties
+++ b/web/src/main/filters/filters-LOCAL.properties
@@ -1,6 +1,9 @@
 # JDBC Properties
-jdbc.driver=org.hsqldb.jdbcDriver
-jdbc.url=jdbc:hsqldb:db:mysticpaste-test
+#jdbc.driver=org.hsqldb.jdbcDriver
+jdbc.driver=com.elvyx.Driver
+
+#jdbc.url=jdbc:hsqldb:db:mysticpaste-test
+jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&user=sa&password=
 jdbc.username=sa
 jdbc.password=
 
