--- a/web/src/main/filters/filters-LOCAL.properties
+++ b/web/src/main/filters/filters-LOCAL.properties
@@ -3,7 +3,7 @@
 jdbc.driver=com.elvyx.Driver
 
 #jdbc.url=jdbc:hsqldb:db:mysticpaste-test
-jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&user=sa&password=
+jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&amp;elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&amp;user=sa&amp;password=
 jdbc.username=sa
 jdbc.password=
 
