old tests and examples

--- a/web/src/main/filters/filters-LOCAL.properties
+++ b/web/src/main/filters/filters-LOCAL.properties
@@ -1,9 +1,9 @@
 # JDBC Properties
-#jdbc.driver=org.hsqldb.jdbcDriver
-jdbc.driver=com.elvyx.Driver
+jdbc.driver=org.hsqldb.jdbcDriver
+#jdbc.driver=com.elvyx.Driver
 
-#jdbc.url=jdbc:hsqldb:db:mysticpaste-test
-jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&amp;elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&amp;user=sa&amp;password=
+jdbc.url=jdbc:hsqldb:db:mysticpaste-test
+#jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&amp;elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&amp;user=sa&amp;password=
 jdbc.username=sa
 jdbc.password=
 
