--- a/pom.xml
+++ b/pom.xml
@@ -60,10 +60,11 @@
     <dependencyManagement>
 
 		    <dependencies>
+
                 <dependency>
-                    <groupId>com.googlecode.java-diff-utils</groupId>
-                    <artifactId>diffutils</artifactId>
-                    <version>1.2</version>
+                    <groupId>org.incava</groupId>
+                    <artifactId>java-diff</artifactId>
+                    <version>1.1</version>
                 </dependency>
 
 		        <!--  WICKET DEPENDENCIES -->
@@ -119,11 +120,7 @@
 		            <artifactId>jta</artifactId>
 		            <version>${jta.version}</version>
 		        </dependency>
-		        <dependency>
-		            <groupId>commons-dbcp</groupId>
-		            <artifactId>commons-dbcp</artifactId>
-		            <version>${dbcp.version}</version>
-		        </dependency>
+
                 <!-- SPRING DEPENDENCIES -->
                 <dependency>
                     <groupId>org.springframework</groupId>
@@ -173,87 +170,6 @@
                         </exclusion>
                     </exclusions>
                 </dependency>
-
-		        <!-- Hazelcast Dependencies -->
-		        <dependency>
-		            <groupId>com.hazelcast</groupId>
-		            <artifactId>hazelcast</artifactId>
-		            <version>${hazelcast.version}</version>
-		        </dependency>
-
-                <!-- SimpleDS for GAE -->
-<!--                <dependency>
-                    <groupId>org.extrema-sistemas</groupId>
-                    <artifactId>simpleds</artifactId>
-                    <version>0.9</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>com.google.appengine</groupId>
-                    <artifactId>appengine-api-1.0-sdk</artifactId>
-                    <version>1.3.1</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>asm</groupId>
-                    <artifactId>asm</artifactId>
-                    <version>3.1</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-jta_1.1_spec</artifactId>
-                    <version>1.1.1</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>javax.jdo</groupId>
-                    <artifactId>jdo2-api</artifactId>
-                    <version>2.3-eb</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.apache.geronimo.specs</groupId>
-                    <artifactId>geronimo-jpa_3.0_spec</artifactId>
-                    <version>1.1.1</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.datanucleus</groupId>
-                    <artifactId>datanucleus-jpa</artifactId>
-                    <version>1.1.5</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.datanucleus</groupId>
-                    <artifactId>datanucleus-enhancer</artifactId>
-                    <version>1.1.4</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>org.datanucleus</groupId>
-                    <artifactId>datanucleus-core</artifactId>
-                    <version>1.1.5</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>com.google.appengine.orm</groupId>
-                    <artifactId>datanucleus-appengine</artifactId>
-                    <version>1.0.5</version>
-                </dependency>-->
-
-		        <!-- TWITTER4J DEPENDENCIES -->
-		        <dependency>
-		           <groupId>net.homeip.yusuke</groupId>
-		           <artifactId>twitter4j</artifactId>
-		           <version>2.0.8</version>
-		            <exclusions>
-		                <exclusion>
-		                    <groupId>org.slf4j</groupId>
-		                    <artifactId>nlog4j</artifactId>
-		                </exclusion>
-		            </exclusions>
-		       </dependency>
 
                 <!-- JETS3T DEPENDENCIES -->
                 <dependency>
@@ -340,15 +256,6 @@
 		            <scope>provided</scope>
 		        </dependency>
 
-		        <!-- RESTEASY DEPENDENCIES -->
-<!-- unused
-		        <dependency>
-		            <groupId>org.jboss.resteasy</groupId>
-		            <artifactId>resteasy-jaxrs</artifactId>
-		            <version>${resteasy.version}</version>
-		        </dependency>
--->
-
 		    </dependencies>
     </dependencyManagement>
 
@@ -364,12 +271,9 @@
         <javamail.version>1.4.1</javamail.version>
         <commons-fileupload.version>1.2.1</commons-fileupload.version>
         <jta.version>1.0.1B</jta.version>
-        <dbcp.version>1.2.2</dbcp.version>
         <slf4j.version>1.6.1</slf4j.version>
         <log4j.version>1.2.14</log4j.version>
         <easymock.version>2.4</easymock.version>
-        <resteasy.version>1.0.2.GA</resteasy.version>
-        <hazelcast.version>1.7.1</hazelcast.version>
     </properties>
 
 </project>
