--- a/web/src/main/filters/filters-LOCAL.properties
+++ b/web/src/main/filters/filters-LOCAL.properties
@@ -1,22 +1,1 @@
-# JDBC Properties
-jdbc.driver=org.hsqldb.jdbcDriver
-#jdbc.driver=com.elvyx.Driver
-
-jdbc.url=jdbc:hsqldb:db:mysticpaste-test
-#jdbc.url=jdbc:elvyx://localhost:4448/?elvyx.real_driver=org.hsqldb.jdbcDriver&amp;elvyx.real_jdbc=jdbc%3Ahsqldb%3Adb%3Amysticpaste-test&amp;user=sa&amp;password=
-jdbc.username=sa
-jdbc.password=
-
-# Hibernate properties
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=true
-hibernate.use_outer_join=true
-
-hibernate.cache.use_query_cache=true
-hibernate.cache.use_second_level_cache=true
-hibernate.cache.provider=org.hibernate.cache.HashtableCacheProvider
-
-hibernate.schemaUpdate=true
-
-# Length for the private token string
-private.token.length=10
+# unused, it will by default pull the application.properties
