--- a/web/pom.xml
+++ b/web/pom.xml
@@ -114,6 +114,11 @@
             <artifactId>wicket-devutils</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-request</artifactId>
+        </dependency>
+
         <!--  HIBERNATE DEPENDENCIES -->
         <dependency>
             <groupId>org.hibernate</groupId>
