--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,11 @@
                     <artifactId>wicket-request</artifactId>
                     <version>${wicket.version}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.wicket</groupId>
+                    <artifactId>wicket-util</artifactId>
+                    <version>${wicket.version}</version>
+                </dependency>
 
 		        <!--  HIBERNATE DEPENDENCIES -->
 		        <dependency>
