--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>wicket-request</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-util</artifactId>
+        </dependency>
+
+
         <!--  HIBERNATE DEPENDENCIES -->
         <dependency>
             <groupId>org.hibernate</groupId>
