--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
         <param-value>DEPLOYMENT</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>org.mortbay.jetty.servlet.SessionPath</param-name>
+        <param-value>/</param-value>
+    </context-param>
+
 	<filter>
 		<filter-name>wicket.mysticpaste</filter-name>
  		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
