--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
 		        <!--  WICKET DEPENDENCIES -->
 		        <dependency>
 		            <groupId>org.apache.wicket</groupId>
-		            <artifactId>wicket</artifactId>
+		            <artifactId>wicket-core</artifactId>
 		            <version>${wicket.version}</version>
 		        </dependency>
 		        <dependency>
@@ -272,7 +272,7 @@
     </dependencyManagement>
 
     <properties>
-        <wicket.version>1.5-SNAPSHOT</wicket.version>
+        <wicket.version>1.5-RC4.2</wicket.version>
         <jetty.version>6.1.4</jetty.version>
         <spring.version>3.0.0.RELEASE</spring.version>
         <hibernate.version>3.5.0-Final</hibernate.version>
