--- a/web/pom.xml
+++ b/web/pom.xml
@@ -94,7 +94,7 @@
         <!--  WICKET DEPENDENCIES -->
         <dependency>
             <groupId>org.apache.wicket</groupId>
-            <artifactId>wicket</artifactId>
+            <artifactId>wicket-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.wicket</groupId>
