--- a/web/src/main/filters/filters-DEV.properties
+++ b/web/src/main/filters/filters-DEV.properties
@@ -6,7 +6,7 @@ jdbc.password=yil2SNcOT5KB
 
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.use_outer_join=true
 
 hibernate.cache.use_query_cache=true
