--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -10,8 +10,8 @@ log4j.logger.org.apache.wicket.version=INFO
 log4j.logger.org.apache.wicket.RequestCycle=INFO
 #log4j.logger.org.apache.wicket.util.resource=DEBUG
 
-log4j.logger.org.apache.commons.httpclient=DEBUG
-log4j.logger.org.jets3t=DEBUG
+log4j.logger.org.apache.commons.httpclient=INFO
+log4j.logger.org.jets3t=INFO
 
 #log4j.logger.org.hibernate=DEBUG
 #log4j.logger.org.springframework=DEBUG
