--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -10,6 +10,7 @@ jdbc.password=
 # Hibernate properties
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
+hibernate.generate_ddl=true
 hibernate.use_outer_join=true
 
 hibernate.cache.use_query_cache=true
