--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <id>sonatype</id>
             <url>http://repository.sonatype.org/</url>
         </repository>
+        <repository>
+            <id>spring-release</id>
+            <name>Spring Maven Release Repository</name>
+            <url>http://repo.springsource.org/libs-release</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
@@ -99,6 +104,17 @@
                     <artifactId>wicket-util</artifactId>
                     <version>${wicket.version}</version>
                 </dependency>
+                <dependency>
+                    <groupId>org.apache.wicket</groupId>
+                    <artifactId>wicket-auth-roles</artifactId>
+                    <version>${wicket.version}</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>de.agilecoders.wicket</groupId>
+                    <artifactId>bootstrap</artifactId>
+                    <version>0.6.3</version>
+                </dependency>
 
 		        <!--  HIBERNATE DEPENDENCIES -->
 		        <dependency>
@@ -111,12 +127,17 @@
                     <artifactId>hibernate-core</artifactId>
                     <version>${hibernate.version}</version>
                 </dependency>
-                  <dependency>
+                <dependency>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-entitymanager</artifactId>
+                    <version>${hibernate.version}</version>
+                </dependency>
+                <dependency>
                     <groupId>javassist</groupId>
                     <artifactId>javassist</artifactId>
                     <version>3.9.0.GA</version>
                     <scope>runtime</scope>
-                  </dependency>
+                </dependency>
 		        <dependency>
 		            <groupId>c3p0</groupId>
 		            <artifactId>c3p0</artifactId>
@@ -183,11 +204,44 @@
                     </exclusions>
                 </dependency>
 
-                <!-- JETS3T DEPENDENCIES -->
                 <dependency>
-                    <groupId>net.java.dev.jets3t</groupId>
-                    <artifactId>jets3t</artifactId>
-                    <version>0.7.1</version>
+                    <groupId>org.springframework.security</groupId>
+                    <artifactId>spring-security-core</artifactId>
+                    <version>${spring-security.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-aop</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-support</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+                </dependency>
+
+                <dependency>
+             		 <groupId>org.springframework.data</groupId>
+             		 <artifactId>spring-data-mongodb</artifactId>
+                    <version>1.0.3.RELEASE</version>
+             	</dependency>
+
+                <dependency>
+                	<groupId>org.mongodb</groupId>
+                	<artifactId>mongo-java-driver</artifactId>
+                	<version>2.9.1</version>
                 </dependency>
 
 		        <!-- LOGGING DEPENDENCIES - LOG4J -->
@@ -272,9 +326,10 @@
     </dependencyManagement>
 
     <properties>
-        <wicket.version>1.5.3</wicket.version>
+        <wicket.version>6.2.0</wicket.version>
         <jetty.version>6.1.4</jetty.version>
-        <spring.version>3.0.0.RELEASE</spring.version>
+        <spring.version>3.1.0.RELEASE</spring.version>
+        <spring-security.version>2.0.4</spring-security.version>
         <hibernate.version>3.5.0-Final</hibernate.version>
         <c3p0.version>0.9.1.2</c3p0.version>
         <junit.version>4.5</junit.version>
