--- a/pom.xml
+++ b/pom.xml
@@ -116,44 +116,6 @@
                     <version>0.6.3</version>
                 </dependency>
 
-		        <!--  HIBERNATE DEPENDENCIES -->
-		        <dependency>
-		            <groupId>org.hibernate</groupId>
-		            <artifactId>hibernate-annotations</artifactId>
-		            <version>${hibernate.version}</version>
-		        </dependency>
-                <dependency>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-core</artifactId>
-                    <version>${hibernate.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.hibernate</groupId>
-                    <artifactId>hibernate-entitymanager</artifactId>
-                    <version>${hibernate.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>javassist</groupId>
-                    <artifactId>javassist</artifactId>
-                    <version>3.9.0.GA</version>
-                    <scope>runtime</scope>
-                </dependency>
-		        <dependency>
-		            <groupId>c3p0</groupId>
-		            <artifactId>c3p0</artifactId>
-		            <version>${c3p0.version}</version>
-		        </dependency>
-		        <dependency>
-		            <groupId>postgresql</groupId>
-		            <artifactId>postgresql</artifactId>
-		            <version>${postgres.version}</version>
-		        </dependency>
-		        <dependency>
-		            <groupId>javax.transaction</groupId>
-		            <artifactId>jta</artifactId>
-		            <version>${jta.version}</version>
-		        </dependency>
-
                 <!-- SPRING DEPENDENCIES -->
                 <dependency>
                     <groupId>org.springframework</groupId>
@@ -172,7 +134,7 @@
                     <version>${spring.version}</version>
                 </dependency>
 
-                <dependency>
+<!--                <dependency>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-orm</artifactId>
                     <version>${spring.version}</version>
@@ -230,7 +192,7 @@
                         <artifactId>commons-logging</artifactId>
                     </exclusion>
                 </exclusions>
-                </dependency>
+                </dependency>-->
 
                 <dependency>
              		 <groupId>org.springframework.data</groupId>
@@ -296,11 +258,13 @@
 		            <version>1.0</version>
 		        </dependency>
 
+<!--
 		        <dependency>
 		            <groupId>hsqldb</groupId>
 		            <artifactId>hsqldb</artifactId>
 		            <version>1.8.0.7</version>
 		        </dependency>
+-->
 
 		        <!--  JETTY DEPENDENCIES FOR TESTING  -->
 		        <dependency>
