--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
              	</dependency>
 
                 <dependency>
+             		 <groupId>org.springframework.data</groupId>
+             		 <artifactId>spring-data-redis</artifactId>
+                    <version>1.0.2.RELEASE</version>
+             	</dependency>
+
+                <dependency>
                 	<groupId>org.mongodb</groupId>
                 	<artifactId>mongo-java-driver</artifactId>
                 	<version>2.9.1</version>
