--- a/web/pom.xml
+++ b/web/pom.xml
@@ -150,6 +150,11 @@
      	</dependency>
 
         <dependency>
+     		 <groupId>org.springframework.data</groupId>
+     		 <artifactId>spring-data-redis</artifactId>
+     	</dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
