some optimizations, like not syntax highlighting history views for speed

--- a/web/src/main/resources/log4j.properties
+++ b/web/src/main/resources/log4j.properties
@@ -10,6 +10,8 @@ log4j.logger.org.apache.wicket.version=INFO
 log4j.logger.org.apache.wicket.RequestCycle=INFO
 #log4j.logger.org.apache.wicket.util.resource=DEBUG
 
+#log4j.logger.com.mysticcoders.mysticpaste.persistence.mongo.PasteItemDaoImpl=DEBUG
+
 log4j.logger.org.apache.commons.httpclient=INFO
 log4j.logger.org.jets3t=INFO
 
