--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,11 @@
         <param-value>DEPLOYMENT</param-value>
     </context-param>
 
+    <context-param>
+        <param-name>org.mortbay.jetty.servlet.SessionPath</param-name>
+        <param-value>/</param-value>
+    </context-param>
+
 	<filter>
 		<filter-name>wicket.mysticpaste</filter-name>
  		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
@@ -33,6 +38,20 @@
             <param-value>wicket.mysticpaste</param-value>
         </init-param>
 	</filter>
+
+    <filter>
+        <filter-name>GzipFilter</filter-name>
+        <filter-class>org.mortbay.servlet.GzipFilter</filter-class>
+        <init-param>
+          <param-name>mimeTypes</param-name>
+          <param-value>text/html,text/plain,text/xml,application/xhtml+xml,text/css,application/javascript,application/x-javascript,image/svg+xml</param-value>
+        </init-param>
+      </filter>
+
+      <filter-mapping>
+        <filter-name>GzipFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+      </filter-mapping>
 
     <filter-mapping>
 		<filter-name>wicket.mysticpaste</filter-name>
