--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,22 @@
             <name>Spring Maven Release Repository</name>
             <url>http://repo.springsource.org/libs-release</url>
         </repository>
+        <repository>
+            <id>mystic-mvn-repo</id>
+            <name>Mystic Github Maven Repository</name>
+            <url>https://raw.github.com/kinabalu/mystic-mvn-repo/master/snapshots</url>
+        </repository>
     </repositories>
 
     <dependencyManagement>
 
 		    <dependencies>
 
+                <dependency>
+                    <groupId>com.mysticcoders</groupId>
+                    <artifactId>wicket-mousetrap</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                </dependency>
                 <dependency>
                     <groupId>org.incava</groupId>
                     <artifactId>java-diff</artifactId>
