--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
                     <version>0.2-SNAPSHOT</version>
                 </dependency>
                 <dependency>
+                    <groupId>com.mysticcoders</groupId>
+                    <artifactId>wicket-alertify</artifactId>
+                    <version>0.1-SNAPSHOT</version>
+                </dependency>
+                <dependency>
                     <groupId>org.incava</groupId>
                     <artifactId>java-diff</artifactId>
                     <version>1.1</version>
