--- a/pom.xml
+++ b/pom.xml
@@ -122,11 +122,14 @@
 
                 <dependency>
                     <groupId>de.agilecoders.wicket</groupId>
-                    <artifactId>bootstrap</artifactId>
-                    <version>0.6.3</version>
-<!--
-                    <version>0.7.5-SNAPSHOT</version>
--->
+                    <artifactId>wicket-bootstrap-core</artifactId>
+                    <version>0.8.4</version>
+                </dependency>
+
+                <dependency>
+                    <groupId>de.agilecoders.wicket</groupId>
+                    <artifactId>wicket-bootstrap-themes</artifactId>
+                    <version>0.8.4</version>
                 </dependency>
 
                 <!-- SPRING DEPENDENCIES -->
@@ -153,6 +156,7 @@
                     <version>${spring.version}</version>
                 </dependency>
 
+<!--
                 <dependency>
              		 <groupId>org.springframework.data</groupId>
              		 <artifactId>spring-data-mongodb</artifactId>
@@ -164,12 +168,43 @@
              		 <artifactId>spring-data-redis</artifactId>
                     <version>1.0.2.RELEASE</version>
              	</dependency>
+-->
+
+                <dependency>
+                    <groupId>com.google.code.morphia</groupId>
+                    <artifactId>morphia</artifactId>
+                    <version>0.102</version>
+                </dependency>
+                <!-- Optional Jars (for certain features) but required by maven for building. -->
+                <dependency>
+                    <groupId>cglib</groupId>
+                    <artifactId>cglib-nodep</artifactId>
+                    <version>[2.1_3,)</version>
+                    <type>jar</type>
+                    <optional>true</optional>
+                </dependency>
+                <dependency>
+                    <groupId>com.thoughtworks.proxytoys</groupId>
+                    <artifactId>proxytoys</artifactId>
+                    <version>1.0</version>
+                    <type>jar</type>
+                    <optional>true</optional>
+                </dependency>
 
                 <dependency>
                 	<groupId>org.mongodb</groupId>
                 	<artifactId>mongo-java-driver</artifactId>
-                	<version>2.9.1</version>
+                	<version>2.10.1</version>
                 </dependency>
+
+                <dependency>
+                    <groupId>redis.clients</groupId>
+                    <artifactId>jedis</artifactId>
+                    <version>2.4.1</version>
+                    <type>jar</type>
+                    <scope>compile</scope>
+                </dependency>
+
 
 		        <!-- LOGGING DEPENDENCIES - LOG4J -->
 		        <dependency>
