--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-	 version="2.4">
+<web-app xmlns="http://java.sun.com/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+         version="3.0">
 
-	<display-name>mysticpaste</display-name>
+<display-name>mysticpaste</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
@@ -21,6 +20,15 @@
         <param-value>/</param-value>
     </context-param>
 
+    <session-config>
+        <session-timeout>720</session-timeout>
+        <cookie-config>
+            <name>JSESSIONID</name>
+            <path>/</path>
+            <http-only>true</http-only>
+            <secure>true</secure>
+        </cookie-config>
+    </session-config>
 	<filter>
 		<filter-name>wicket.mysticpaste</filter-name>
  		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
@@ -41,7 +49,7 @@
 
     <filter>
         <filter-name>GzipFilter</filter-name>
-        <filter-class>org.mortbay.servlet.GzipFilter</filter-class>
+        <filter-class>org.eclipse.jetty.servlets.GzipFilter</filter-class>
         <init-param>
           <param-name>mimeTypes</param-name>
           <param-value>text/html,text/plain,text/xml,application/xhtml+xml,text/css,application/javascript,application/x-javascript,image/svg+xml</param-value>
